responsive fix, h2 alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,12 +301,21 @@ header h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .choices {
@@ -379,6 +388,7 @@ input:focus {
   width: -moz-fit-content;
   width: fit-content;
   height: auto;
+  max-width: 100%;
 }
 
 .userAnswer h2 {
@@ -417,6 +427,7 @@ input:focus {
   width: fit-content;
   height: auto;
   margin-bottom: 0px;
+  max-width: 90vw;
 }
 
 .submit {
@@ -458,6 +469,9 @@ footer p {
 
 @media (max-width: 850px) {
   .fieldsetFlex {
+    padding: 20px;
+  }
+  .flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -468,7 +482,6 @@ footer p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding: 20px;
   }
   .choices {
     width: -webkit-fit-content;
@@ -502,6 +515,9 @@ footer p {
   h1 {
     font-size: 4rem;
     line-height: 5.4rem;
+  }
+  footer a {
+    margin: 0;
   }
 }
 
